out.txt
ninja: Entering directory `build'
[1/2] Compiling C++ object smol.p/src_util_fn.cpp.o
FAILED: smol.p/src_util_fn.cpp.o 
c++ -Ismol.p -I. -I.. -Isrc -I../src -I../src/ast/expr -I../src/ast/stmt -I../src/tables -I../src/parser -I../src/lexer -I../src/util -Xclang -fcolor-diagnostics -pipe -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -Wnon-virtual-dtor -Wextra -Wpedantic -std=c++17 -g -MD -MQ smol.p/src_util_fn.cpp.o -MF smol.p/src_util_fn.cpp.o.d -o smol.p/src_util_fn.cpp.o -c ../src/util/fn.cpp
../src/util/fn.cpp:8:56: error: invalid operands to binary expression ('basic_string<char>' and 'std::vector::size_type' (aka 'unsigned long'))
            + std::to_string(count) + ") but passed (" + args.size() + ")");
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_bvector.h:303:3: note: candidate function not viable: no known conversion from 'basic_string<char>' to 'std::ptrdiff_t' (aka 'long') for 1st argument
  operator+(ptrdiff_t __n, const _Bit_iterator& __x)
  ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_bvector.h:393:3: note: candidate function not viable: no known conversion from 'basic_string<char>' to 'std::ptrdiff_t' (aka 'long') for 1st argument
  operator+(ptrdiff_t __n, const _Bit_const_iterator& __x)
  ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6073:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'unsigned long')
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs, _CharT __rhs)
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6127:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'unsigned long')
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:423:5: note: candidate template ignored: could not match 'reverse_iterator<type-parameter-0-0>' against 'unsigned long'
    operator+(typename reverse_iterator<_Iterator>::difference_type __n,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:996:5: note: candidate template ignored: could not match '__normal_iterator<type-parameter-0-0, type-parameter-0-1>' against 'unsigned long'
    operator+(typename __normal_iterator<_Iterator, _Container>::difference_type
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:1219:5: note: candidate template ignored: could not match 'move_iterator<type-parameter-0-0>' against 'unsigned long'
    operator+(typename move_iterator<_Iterator>::difference_type __n,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6020:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6057:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::vector::size_type' (aka 'unsigned long')
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6085:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6091:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6097:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6109:5: note: candidate template ignored: could not match 'const _CharT *' against 'basic_string<char>'
    operator+(const _CharT* __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6115:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(_CharT __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.h:6121:5: note: candidate template ignored: could not match 'const _CharT *' against 'std::vector::size_type' (aka 'unsigned long')
    operator+(basic_string<_CharT, _Traits, _Alloc>&& __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.tcc:1158:5: note: candidate template ignored: could not match 'const _CharT *' against 'basic_string<char>'
    operator+(const _CharT* __lhs,
    ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/basic_string.tcc:1174:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'unsigned long'
    operator+(_CharT __lhs, const basic_string<_CharT, _Traits, _Alloc>& __rhs)
    ^
../src/util/fn.cpp:7:20: error: no member named 'runtime_error' in namespace 'std'
        throw std::runtime_error(name() + ": arguments required ("
              ~~~~~^
../src/util/fn.cpp:6:21: warning: comparison of integers of different signs: 'std::vector::size_type' (aka 'unsigned long') and 'int' [-Wsign-compare]
    if (args.size() != count)
        ~~~~~~~~~~~ ^  ~~~~~
1 warning and 2 errors generated.
ninja: build stopped: subcommand failed.
